Partial content changed. Still lots to do

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Halcyon Days - An Exclusive Freebie for Codrops by Peter Finlan.</title>
+    <title>Yushi. Yuca más sushi</title>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -48,13 +48,13 @@
               </div>
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center inner">
-                  <h1 class="animated fadeInDown">HALCYON<span>DAYS</span></h1>
-                  <p class="animated fadeInUp delay-05s">An exclusive HTML5/CSS3 freebie by Peter Finlan, for <em>Codrops</em></p>
+                  <h1 class="animated fadeInDown">YUSHI<!-- <span>DAYS</span> --></h1>
+                  <p class="animated fadeInUp delay-05s">yuca + sushi</p>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                  <a href="http://tympanus.net/codrops/?p=19439" class="learn-more-btn">Back to the article</a>
+                  <a href="#intro" class="learn-more-btn">Ver más</a>
                 </div>
               </div>
             </div>
@@ -64,8 +64,10 @@
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2 wp1">
-                <h1 class="arrow">A Creative Portfolio Template</h1>
-                <p>Sed a lorem quis neque interdum <a href="#">consequat ut sed sem</a>. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent id tempor ipsum. Fusce at massa ac nunc porta fringilla sed eget neque. Quisque quis pretium nulla. Fusce eget bibendum neque, vel volutpat augue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                <h1 class="arrow">Combinación única de ingredientes</h1>
+                <p>
+                  Ingredientes comunes y preparaciones exclusivas. <br/>Logramos extraer lo mejor de la yuca y la fusionamos con ingredientes que nunca has pensado antes.
+                </p>
               </div>
             </div>
           </div>
@@ -74,31 +76,28 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <h1 class="arrow">Love what you do, and you'll do it well</h1>
+                <h1 class="arrow">Amamos lo que hacemos y lo hacemos bien</h1>
                 <div class="features-wrapper">
                   <div class="col-md-4 wp2">
                     <div class="icon">
                       <i class="fa fa-laptop shadow"></i>
                     </div>
-                    <h2>Digital Design</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
-                    primis in faucibus.</p>
+                    <h2>Yushi Queso</h2>
+                    <p>Dos de los ingredientes más comunes en la cocina del sur occidente colombiano.</p>
                   </div>
                   <div class="col-md-4 wp2 delay-05s">
                     <div class="icon">
                       <i class="fa fa-code shadow"></i>
                     </div>
-                    <h2>Web Development</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
-                    primis in faucibus.</p>
+                    <h2>Yushi Salchicha</h2>
+                    <p>Fusión entre lo vegetal y lo animal.</p>
                   </div>
                   <div class="col-md-4 wp2 delay-1s">
                     <div class="icon">
                       <i class="fa fa-heart shadow"></i>
                     </div>
-                    <h2>Creative Direction</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
-                    primis in faucibus.</p>
+                    <h2>Yushi Jamón y Queso</h2>
+                    <p>No necesita descripción.</p>
                   </div>
                   <div class="clearfix"></div>
                 </div>
