Content, fonts and some styles changed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Yushi. Yuca más sushi</title>
+    <title>Yushi. Yuca como nunca la has probado</title>
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -27,12 +27,10 @@
                 <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
                   <nav class="pull">
                     <ul class="top-nav">
-                      <li><a href="#intro">Introduction <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-                      <li><a href="#features">Features <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-                      <li><a href="#responsive">Responsive Design <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-                      <li><a href="#portfolio">Portfolio <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-                      <li><a href="#team">Team <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-                      <li><a href="#contact">Get in Touch <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                      <li><a href="#intro">Intro <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                      <li><a href="#features">Armalo como querás <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                      <li><a href="#horarios">Horarios <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                      <li><a href="#contact">Hablá con nosotros <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
                     </ul>
                   </nav>
                 </div>
@@ -49,12 +47,12 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center inner">
                   <h1 class="animated fadeInDown">YUSHI<!-- <span>DAYS</span> --></h1>
-                  <p class="animated fadeInUp delay-05s">yuca + sushi</p>
+                  <p class="animated fadeInUp delay-05s">yuca como nunca la has probado</p>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                  <a href="#intro" class="learn-more-btn">Ver más</a>
+                  <a href="#intro" class="learn-more-btn">ver más</a>
                 </div>
               </div>
             </div>
@@ -64,47 +62,55 @@
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2 wp1">
-                <h1 class="arrow">Combinación única de ingredientes</h1>
+                <h1 class="arrow">combinación única de ingredientes</h1>
                 <p>
                   Ingredientes comunes y preparaciones exclusivas. <br/>Logramos extraer lo mejor de la yuca y la fusionamos con ingredientes que nunca has pensado antes.
                 </p>
+                <br/>
+                <a href="#features" class="down-arrow-btn"><i class="fa fa-chevron-down"></i></a>
               </div>
             </div>
           </div>
         </section>
+
         <section class="features text-center section-padding" id="features">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <h1 class="arrow">Amamos lo que hacemos y lo hacemos bien</h1>
+                <h1 class="arrow">armalo como querás</h1>
+                  <p>
+                    Todos los yushis son a base de yuca y queso. La base tiene un costo de $1000
+                  </p>
                 <div class="features-wrapper">
                   <div class="col-md-4 wp2">
                     <div class="icon">
                       <i class="fa fa-laptop shadow"></i>
                     </div>
-                    <h2>Yushi Queso</h2>
-                    <p>Dos de los ingredientes más comunes en la cocina del sur occidente colombiano.</p>
+                    <h2>Jamón</h2>
                   </div>
                   <div class="col-md-4 wp2 delay-05s">
                     <div class="icon">
                       <i class="fa fa-code shadow"></i>
                     </div>
-                    <h2>Yushi Salchicha</h2>
-                    <p>Fusión entre lo vegetal y lo animal.</p>
+                    <h2>Salchicha</h2>
                   </div>
                   <div class="col-md-4 wp2 delay-1s">
                     <div class="icon">
                       <i class="fa fa-heart shadow"></i>
                     </div>
-                    <h2>Yushi Jamón y Queso</h2>
-                    <p>No necesita descripción.</p>
+                    <h2>Bocadillo</h2>
                   </div>
                   <div class="clearfix"></div>
+                  <p>
+                    Escogé los ingredientes. Cada uno cuesta $500
+                  </p>
                 </div>
               </div>
             </div>
           </div>
         </section>
+
+        <!-- 
         <section class="text-center" id="responsive">
           <div class="container-fluid nopadding responsive-services">
             <div class="wrapper">
@@ -139,16 +145,18 @@
             </div>
           </div>
         </section>
-        <section class="swag text-center">
+         -->
+        <section class="swag text-center" id="horarios">
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 99 Problems<span>but <em>design</em> 'aint one</span></h1>
-                <a href="#portfolio" class="down-arrow-btn"><i class="fa fa-chevron-down"></i></a>
+                <h1>Jueves a Domingo<span>6pm a 12am</span></h1>
+                <a href="#subscribe" class="down-arrow-btn"><i class="fa fa-chevron-down"></i></a>
               </div>
             </div>
           </div>
         </section>
+<!-- 
         <section class="portfolio text-center section-padding" id="portfolio">
           <div class="container">
             <div class="row">
@@ -241,15 +249,17 @@
             </div>
           </div>
         </section>
+ -->
         <div class="ignite-cta text-center">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <a href="#" class="ignite-btn">Ignite Your Passion</a>
+                <a href="#" class="ignite-btn">Contale de yushi a quien diga que no le gusta la yuca</a>
               </div>
             </div>
           </div>
         </div>
+        <!-- 
         <section class="team text-center section-padding" id="team">
           <div class="container">
             <div class="row">
@@ -344,40 +354,41 @@
             </div>
           </div>
         </section>
-        <section class="subscribe text-center">
+         -->
+        <section class="subscribe text-center" id="subscribe">
           <div class="container">
-            <h1><i class="fa fa-paper-plane"></i><span>Subscribe to stay in the loop</span></h1>
+            <h1><i class="fa fa-paper-plane"></i><span>Dejanos darte descuentos</span></h1>
             <form action="#">
               <input type="text" name="" value="" placeholder="" required>
-              <input type="submit" name="" value="Send">
+              <input type="submit" name="" value="Dale">
             </form>
           </div>
         </section>
         <section class="dark-bg text-center section-padding contact-wrap" id="contact">
-          <a href="#top" class="up-btn"><i class="fa fa-chevron-up"></i></a>
+          <!-- <a href="#top" class="up-btn"><i class="fa fa-chevron-up"></i></a> -->
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <h1 class="arrow">Drop us a line</h1>
+                <h1 class="arrow">Hablá con nosotros</h1>
               </div>
             </div>
             <div class="row contact-details">
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><i class="fa fa-map-marker"></i><span>Address</span></h2>
-                  <p>Level 6, 23 Pitt St, Sydney</p>
+                  <h2><i class="fa fa-map-marker"></i><span>Por la loma de la Cruz</span></h2>
+                  <p>Cra 17 # 2b - 49</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><i class="fa fa-mobile"></i><span>Phone</span></h2>
-                  <p>+61 9 211 3747</p>
+                  <h2><i class="fa fa-mobile"></i><span>Agreganos a WhatsApp</span></h2>
+                  <p>317 757 2939</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><i class="fa fa-paper-plane"></i><span>Email</span></h2>
-                  <p><a href="#">hey@halcyondays.com</a></p>
+                  <h2><i class="fa fa-paper-plane"></i><span>Escribinos un email</span></h2>
+                  <p>nando@yushi.co</p>
                 </div>
               </div>
             </div>
@@ -395,14 +406,16 @@
         <footer>
           <div class="container">
             <div class="row">
+              <!-- 
               <div class="col-md-6">
                 <ul class="legals">
                   <li><a href="#">Terms &amp; Conditions</a></li>
                   <li><a href="#">Legals</a></li>
                 </ul>
               </div>
-              <div class="col-md-6 credit">
-                <p>Designed &amp; Developed by <a href="http://www.peterfinlan.com/">Peter Finlan</a> exclusively for <a href="http://tympanus.net/codrops/"><em>Codrops</em></a></p>
+             -->
+              <div class="col-md-12 credit">
+                <p>Yushi quiere hacerte comer más yuca. Danos ideas</p>
               </div>
             </div>
           </div>
