--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                       <li><a href="#intro">Intro <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
                       <li><a href="#features">Armalo como querás <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
                       <li><a href="#horarios">Horarios <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                      <li><a href="#subscribe">Descuentos <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
                       <li><a href="#contact">Hablá con nosotros <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
                     </ul>
                   </nav>
@@ -366,7 +367,7 @@
          -->
         <section class="subscribe text-center" id="subscribe">
           <div class="container">
-            <h1><i class="fa fa-paper-plane"></i><span>Dejanos darte descuentos</span></h1>
+            <h1><i class="fa fa-paper-plane"></i><span>Dejanos darte descuentos por email</span></h1>
             <form action="#">
               <input type="text" name="" value="" placeholder="" required>
               <input type="submit" name="" value="Dale">
