Price changed. Cheese ingredient added

--- a/index.html
+++ b/index.html
@@ -80,18 +80,24 @@
               <div class="col-md-12">
                 <h1 class="arrow">armalo como querás</h1>
                   <p>
-                    Todos los yushis son a base de yuca y queso. La base tiene un costo de $1000
+                    Todos los yushis son a base de yuca. La base tiene un costo de $500
                   </p>
                 <div class="features-wrapper">
                   <div class="col-md-4 wp2">
                     <div class="icon">
-                      <i class="fa fa-laptop shadow"></i>
+                      <i class="fa fa-heart shadow"></i>
+                    </div>
+                    <h2>Queso</h2>
+                  </div>
+                  <div class="col-md-4 wp2">
+                    <div class="icon">
+                      <i class="fa fa-heart shadow"></i>
                     </div>
                     <h2>Jamón</h2>
                   </div>
                   <div class="col-md-4 wp2 delay-05s">
                     <div class="icon">
-                      <i class="fa fa-code shadow"></i>
+                      <i class="fa fa-heart shadow"></i>
                     </div>
                     <h2>Salchicha</h2>
                   </div>
