Some styling fixes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Yushi. Yuca como nunca la has probado</title>
-    <!-- <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'> -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/flexslider.css" rel="stylesheet" >
@@ -47,7 +46,7 @@
               </div>
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center inner">
-                  <h1 class="animated fadeInDown">YUSHI<!-- <span>DAYS</span> --></h1>
+                  <h1 class="animated fadeInDown">YUSHI</h1>
                   <p class="animated fadeInUp delay-05s">yuca como nunca la has probado</p>
                 </div>
               </div>
@@ -86,25 +85,25 @@
                 <div class="features-wrapper">
                   <div class="col-md-3 col-sm-6 wp2">
                     <div class="icon">
-                      <i class="fa fa-heart shadow"></i>
+                      <i class="fa fa-heart"></i>
                     </div>
                     <h2>Queso</h2>
                   </div>
                   <div class="col-md-3 col-sm-6 wp2 delay-05s">
                     <div class="icon">
-                      <i class="fa fa-heart shadow"></i>
+                      <i class="fa fa-heart"></i>
                     </div>
                     <h2>Jamón</h2>
                   </div>
                   <div class="col-md-3 col-sm-6 wp2 delay-1s">
                     <div class="icon">
-                      <i class="fa fa-heart shadow"></i>
+                      <i class="fa fa-heart"></i>
                     </div>
                     <h2>Salchicha</h2>
                   </div>
                   <div class="col-md-3 col-sm-6 wp2 delay-15s">
                     <div class="icon">
-                      <i class="fa fa-heart shadow"></i>
+                      <i class="fa fa-heart"></i>
                     </div>
                     <h2>Bocadillo</h2>
                   </div>
