--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
                 <p>
                   Ingredientes comunes y preparaciones exclusivas. <br/>Logramos extraer lo mejor de la yuca y la fusionamos con ingredientse que nunca has pensado antes.
                 </p>
-                <br/>
                 <a href="#features" class="down-arrow-btn"><i class="fa fa-chevron-down"></i></a>
               </div>
             </div>
@@ -111,6 +110,7 @@
                   <p>
                     Escogé los ingredientes. Cada uno cuesta $500
                   </p>
+                  <a href="#horarios" class="down-arrow-btn"><i class="fa fa-chevron-down"></i></a>
                 </div>
               </div>
             </div>
@@ -125,6 +125,7 @@
                 <p>
                   Por la Loma de la Cruz. Cra. 17 # 2b - 49
                 </p>
+                <a href="#contale" class="down-arrow-btn"><i class="fa fa-chevron-down"></i></a>
             </div>
           </div>
         </section>
@@ -140,7 +141,7 @@
           </div>
         </section>
  -->
-        <div class="ignite-cta text-center">
+        <div class="ignite-cta text-center" id="contale">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
@@ -157,6 +158,7 @@
               <input type="text" name="" value="" placeholder="" required>
               <input type="submit" name="" value="Dale">
             </form>
+            <a href="#contact" class="down-arrow-btn"><i class="fa fa-chevron-down"></i></a>
           </div>
         </section>
         <section class="dark-bg text-center section-padding contact-wrap" id="contact">
