Small typo fixed

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">combinación única de ingredientes</h1>
                 <p>
-                  Ingredientes comunes y preparaciones exclusivas. <br/>Logramos extraer lo mejor de la yuca y la fusionamos con ingredientse que nunca has pensado antes.
+                  Ingredientes comunes y preparaciones exclusivas. <br/>Logramos extraer lo mejor de la yuca y la fusionamos con ingredientes que nunca has pensado antes.
                 </p>
                 <a href="#features" class="down-arrow-btn"><i class="fa fa-chevron-down"></i></a>
               </div>
