Purchase complete notification added

--- a/navidad/index.html
+++ b/navidad/index.html
@@ -235,9 +235,11 @@
         <!-- /.wrap -->
     </footer>
     <script src="js/jquery.js"></script>
-    <script src="bower_components/ddp.js/src/ddp.js"></script>
-    <script src="bower_components/q/q.js"></script>
-    <script src="bower_components/asteroid/dist/asteroid.browser.js"></script>
+
+    <script src="js/ddp.js"></script>
+    <script src="js/q.js"></script>
+    <script src="js/asteroid.browser.js"></script>
+
     <script src="js/library.js"></script>
     <script src="js/script.js"></script>
     <script src="js/retina.js"></script>
