What's yushi section added

--- a/navidad/index.html
+++ b/navidad/index.html
@@ -36,7 +36,7 @@
         <!-- <div id="snowContainer">
             <canvas id="demo-canvas"></canvas>
         </div> -->
-        <header>
+        <header id="comprar">
             <div class="wrap">
                 <img src="upload/yushi-navidad.png" height="532" width="252" alt="" class="header-img">
                 <div class="header-wrapper">
@@ -67,7 +67,7 @@
                             </div>
                         </div>
                         <div class="buttons-wrapper">
-                            <div class="morph-button morph-button-modal morph-button-modal-2 morph-button-fixed">
+                            <div class="morph-button active morph-button-modal morph-button-modal-2 morph-button-fixed">
                                 <button type="button">Comprar</button>
                                 <div class="morph-content">
                                     <div>
@@ -120,31 +120,32 @@
                 </div>
                 <!-- /.wrap -->
             </div>
-            <!-- /.promo clearfix - - >
+            <!-- /.promo clearfix -->
 
             <div class="discover clearfix">
                 <div class="wrap">
                     <div class="discover-content clearfix">
-                        <h2>Discover</h2>
-                        <p>Human rights momentum. World problem solving turmoil, change movements environmental pursue these aspirations initiative donation. Policy dialogue, underprivileged accessibility, asylum visionary, prevention beneficiaries carbon emissions reductions empower.</p>
+                        <h2>¿Yushi?</h2>
+                        <p>
+                        <b>Deliciosos</b>. ¿Has comido yuca frita? Muy rica ¿no? Ahora imaginátela rellena de queso doble crema, que cuando la mordés sale el queso derretido. <br/>
+                        Tenés que probrar yushi relleno de bocadillo. Ese corte entre la yuca salada y el bocadillo dulce. Nos sorprendimos lo rico que supo la primera vez que lo hicimos. Dejate sorprender vos también.<br/>
+                        De lo rico que sabe la carne no te tenemos que hablar.
+                        </p>
                         <div class="discover-button clearfix">
-                            <a href="#" class="button button-download">
-                                <span class="button-download-title">Download for</span>
-                                <span class="button-download-subtitle">Apple iOS</span>
-                            </a>
-                            <a href="#" class="button button-download android">
-                                <span class="button-download-title">Download for</span>
-                                <span class="button-download-subtitle">Android</span>
-                            </a>
+                          <div class="buttons-wrapper">
+                            <div class="morph-button morph-button-fixed">
+                                <a href="#comprar">Hagamos la prueba</a>
+                            </div><!-- morph-button -->
+                          </div>
                         </div>
                     </div>
                     <div class="discover-img">
-                        <div class="discover-img-inside"><img src="upload/discover.png" height="486" width="634" alt=""></div>
+                        <div class="discover-img-inside"><img src="images/un_yushi.jpg" width="550" alt=""></div>
                     </div>
                 </div>
-                <! - - /.wrap - - >
+                <!-- /.wrap -->
             </div>
-            <! - - /.discover clearfix - - >
+            <!-- /.discover clearfix - - >
             <div class="video clearfix">
                 <! - - <div class="wrap">
                     <div class="video-title">Explore. Walk &amp; Ride in action</div>
@@ -231,6 +232,8 @@
     <footer>
         <div class="wrap">
             <p>&copy; 2014 <strong>YUSHI</strong>, todos los derechos reservados</p>
+            <p><strong>Cali</strong> - 315 853 5153, 317 757 2932. Por la Loma de la Cruz. Cra. 17 # 2b - 49</p>
+            <p><strong>Bogotá</strong> - 315 495 2797. Calle 34 # 19-20. Teusaquillo</p>
         </div>
         <!-- /.wrap -->
     </footer>
